--- a/internet/css/toggle.css
+++ b/internet/css/toggle.css
@@ -28,16 +28,16 @@ body{
     padding: 20px;
     font-size: 24px;
     font-weight: 300;
-    background: #2c3e50;
+    background: #ed5f5f;
     color: #fff;
     text-decoration: none;
 }
 .accordion-titulo.open {
-    background: #22b3a0;
+    background: #015599;
     color: #fff;
 }
 .accordion-titulo:hover {
-    background: #22b3a0;
+    background: #015599;
 }
 
 .accordion-titulo span.toggle-icon:before {
