--- a/travel/css/travel.css
+++ b/travel/css/travel.css
@@ -48,7 +48,7 @@
     margin-top: -20px;
     /* background-color: #cccccc; */
     z-index: 1000;
-    color: #1B5E20;/*color de subtitulos*/
+    color: #fff;/*color de subtitulos*/
      font-weight: bold;
     background: url(../image/Travel_txtBG.png) repeat-x;
 }
