--- a/video/css/video.css
+++ b/video/css/video.css
@@ -71,6 +71,7 @@
 
 .appsSwiper{
     margin: 1px auto;
+    margin-top: 300px;
 }
 
 .sec-menu-line{width: 80px;height:2px;margin: -1px auto 0 auto;padding: 0;border:2px solid #3399ff;/*border:2px solid #3399ff;*//*border-top: 0px solid #3399ff*/}
