--- a/common/new/css/main.css
+++ b/common/new/css/main.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
 }
+.col-12{
+    padding: 0;
+}
 .header img{
+    width: 100%;
     height: 50px;
     position: absolute;
 }
@@ -10,6 +14,7 @@
     height: 50px;
     position: relative;
     float: right;
+    margin-right: 1%;
 }
 .header-logo img {
     margin: 5px 0 0 15px ;
@@ -84,23 +89,20 @@ input[type="checkbox"]{
 }
 .welcome-signup {
     font-size: 2.0em;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 .separator {
     height: 140px;
 }
 .action-button {
     font-size: 1.5em;
-    font-weight: 900;
-    margin-top: 30px;
+    font-weight: 800;
+    margin-top: 20px;
     width: 70%;
-    padding: 15px;
+    padding: 8px;
     border-radius: 30px;
     color: #ffffff;
     border: 1px solid #35b3a0;
-    background-color: #333c82;
-}
-.action-button:hover {
     background-color: #005baa;
 }
 .terms {
@@ -118,3 +120,17 @@ input[type="checkbox"]{
     height: 5px;
     color: #eb1f2d;
 }
+.footer {
+    margin-top: 15%;
+    height: 50px;
+    background-color: #005baa;
+    width:100%; 
+    position:absolute; 
+    bottom:0; 
+}
+.footer span {
+    color: #ffffff;
+    font-weight: 1000;
+    font-size: 1.2em;
+}
+
