--- a/travel/css/travel_detail.css
+++ b/travel/css/travel_detail.css
@@ -79,7 +79,7 @@ p{
     /* padding-left: 10px; */
     padding-bottom: 10px;
     margin-top: 5px;
-    color: #1B5E20; /*  color de titulo de la subpagina*/
+    color: #ffffff; /*  color de titulo de la subpagina*/
 }
 
 
@@ -88,7 +88,7 @@ p{
     border-top: 3px solid #ccc;
     padding: 5px 0;
     margin: 0;
-    color: #1B5E20; /*color de subtitulo*/
+    color: #ffffff; /*color de subtitulo*/
     font-size: 20px;
 }
 
