--- a/video/css/videoDetails.css
+++ b/video/css/videoDetails.css
@@ -55,12 +55,13 @@ body{
  }
 
   .video{
-    font-size: 22px;
+    position: absolute;
+    font-size: 1.3em;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-weight: bold;
     color: #fff;
-    margin-right: 5%;
+    margin-right: 10%;
   }
 
 .logo_cntr {
